# ocrt

./: .gitignore  README.md  pyproject.toml
ocrt/: __main__.py  extra_utils.py
output/: sge_opener.json
