[tool.poetry]
name = "ocrt"
version = "0.1.0"
description = ""
authors = ["herulume"]
readme = "README.md"
# license = "BSD"
packages = [
  { include = "ocrt" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
pyqt6 = "^6.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
